Closed Bug 1284784 Opened 8 years ago Closed 8 years ago

ARM64:void br(Instruction* at, const Register&xn) not implemented

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: sk.alvin.x, Unassigned)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.102 Safari/537.36
Attachment #8768302 - Flags: review?(sstangl)
Attachment #8768302 - Flags: review?(sstangl) → review?(luke)
Comment on attachment 8768302 [details] [diff] [review]
implement "void br(Instruction* at, const Register& xn)"

Review of attachment 8768302 [details] [diff] [review]:
-----------------------------------------------------------------

Redirecting to more appropriate ARM64 reviewer.
Attachment #8768302 - Flags: review?(luke) → review?(sstangl)
Comment on attachment 8768302 [details] [diff] [review]
implement "void br(Instruction* at, const Register& xn)"

Review of attachment 8768302 [details] [diff] [review]:
-----------------------------------------------------------------

Fine to add. What is this needed for?
Attachment #8768302 - Flags: review?(sstangl) → review+
(In reply to Sean Stangl [:sstangl] from comment #3)
> Comment on attachment 8768302 [details] [diff] [review]
> implement "void br(Instruction* at, const Register& xn)"
> 
> Review of attachment 8768302 [details] [diff] [review]:
> -----------------------------------------------------------------
> 
> Fine to add. What is this needed for?

PatchJump() probably need this function.
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6a563ce546e2
implement "void br(Instruction* at, const Register& xn)". r=sstangl
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/6a563ce546e2
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: