Bug 1284784 -  implement "void br(Instruction* at, const Register& xn)". r=sstangl